# mycursesTUI

./: CMakeLists.txt  Makefile  README.md  form_classes.h  form_test  form_test.cpp  test  test.c  test.cpp
buildtest/: CMakeCache.txt  Makefile  cmake_install.cmake
